[metadata]
name = mercy
version = 1
summary = Ironic functional test suite
description-file =
    README.md
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    mercy

[entry_points]
console_scripts =
    mercy = mercy.cmd.runner:main

[wheel]
universal = 1
